--- a/index.html
+++ b/index.html
@@ -5,13 +5,69 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ISD Team</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://unpkg.com/@csstools/normalize.css" rel="stylesheet" />
 </head>
 
 <body>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis quas quod, at tenetur ex quam odit fuga
-        necessitatibus saepe asperiores voluptate! Eius, saepe consequatur! Reprehenderit culpa nulla excepturi facere
-        sapiente.</p>
+    <div class="header">
 
+    </div>
+
+    <div class="main">
+
+        <div class="container">
+            <div class="content_box1">
+                <p>Добро пожаловать на сайт канала "Street Illegal SPB" – уникальную площадку для всех любителей RC
+                    дрифта
+                    масштабных моделей масштаба 1:10 в городе Санкт-Петербурге! Мы представляем захватывающие видео,
+                    обзоры, соревнования и эксклюзивные контенты, полностью посвященные миру RC дрифта.</p>
+            </div>
+            <div class="content_box2">
+                <img src="image/content_1.jpg" alt="image">
+            </div>
+            <div class="content_box3">
+                <img src="image/content_2.jpg" alt="image">
+            </div>
+            <div class="content_box4">
+                <p>На нашем канале вы сможете насладиться виртуозным мастерством наших пилотов – группы
+                    талантливых и опытных молодых парней, совершенствующих свои навыки и создающих потрясающие дрифтовые
+                    сцены
+                    на специально созданных трассах в Санкт-Петербурге. Мы стремимся донести атмосферу реальных
+                    дрифт-соревнований, перенося вас в мир скорости, техники и адреналина.</p>
+            </div>
+            <div class="content_box5">
+                <p>Видео на нашем канале включают в себя яркие моменты соревнований, демонстрацию профессиональных
+                    трюков, тестирование новых моделей и обзоры самых популярных и передовых технологий в мире RC
+                    дрифта. Мы также регулярно приглашаем гостей – профессионалов и экспертов этой области, чтобы
+                    поделиться своими знаниями и опытом с нашей аудиторией.</p>
+            </div>
+            <div class="content_box6">
+                <img src="image/content_3.jpg" alt="image">
+            </div>
+            <div class="content_box7">
+                <img src="image/content_4.jpg" alt="image">
+            </div>
+            <div class="content_box8">
+                <p>
+                    Если вы увлекаетесь RC дрифтом, хотите научиться управлять моделями, улучшать их технические
+                    характеристики или просто получать удовольствие от наблюдения за дрифтовыми заездами, то этот канал
+                    создан специально для вас. Подписывайтесь на наш канал "Street Illegal SPB" и вместе с нами окунитесь в
+                    захватывающий мир RC дрифта масштабных моделей 1:10 в Санкт-Петербурге!</p>
+            </div>
+            <div class="content_box9">
+                <p>Давайте вместе прокачаем RC дрифт в нашем городе и покажем всем, что СПБ – настоящая столица RC дрифта!</p>
+            </div>
+        </div>
+
+
+
+    </div>
+
+    <div class="footer">
+
+    </div>
 </body>
+<script src="style.js"></script>
 
 </html>
